@@ -1,0 +1,21 @@
+#username1:key1
+#username2:key2
+# OR:
+#username1:password1
+#username2:password2
+#
+# Keys must be generated by turnadmin utility. The key value depends
+# on user name, realm, and password:
+#
+# Example:
+# $ turnadmin -k -u ninefingers -r north.gov -p youhavetoberealistic
+# Output: 0xbc807ee29df3c9ffa736523fb2c4e8ee
+# ('0x' in the beginning of the key is what differentiates the key from
+# password. If it has 0x then it is a key, otherwise it is a password).
+#
+# The corresponding user account entry in the userdb file will be:
+# 
+#ninefingers:0xbc807ee29df3c9ffa736523fb2c4e8ee
+# Or, equivalently (less secure):
+#ninefingers:youhavetoberealistic
+#
